# uwsgi-quickstart

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml
django/: Dockerfile  pyproject.toml  uwsgi.ini
django/djangoquickstart/: manage.py
django/djangoquickstart/djangoquickstart/: wsgi.py
django/djangoquickstart/quickstart/templates/quickstart/: welcome.html
django/djangoquickstart/settings/: base.py  staging.py
djangoquickstart/djangoquickstart/: urls.py  uwsgi.ini
djangoquickstart/quickstart/: views.py
nginx/: Dockerfile  nginx.conf
simple/: application.py  uwsgi.ini
